2008-10-06  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.mdp: Updated.
	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Add a way to enable
	  vi mode.
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Call the text editor
	  widget even if the escape key is pressed.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Fixed bug with on
	  the fly edit options changing.

2008-09-30  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs: Exposed the
	  control left/right option to the user.

2008-09-30  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Exposet
	  ControlLeftRightMode option in the options class == made a real
	  monodevelop property (default value taken from platform service).

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 430509 -
	  Comment folding is too aggresive'.

2008-09-26  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Track API. Move
	  folding logic out of the editor. Reduce file width to 132 cols,
	  assuming 8-wide tabs.

2008-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml: Updated.
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fix threading problem
	  in ParseInformationUpdaterWorkerThread. This thread was getting the
	  TextEditor property which runs gtk code, and this is only allowed
	  in the GUI thread.

2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs: Track API.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: improved comment
	  folding update.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: fixed 'Bug 427511 -